# HousekeeperPi

./: .gitignore  .gitmodules  Dockerfile  Doxyfile  PiCameraServer.py  README.md  bot.py  camera.py  piImgServer.py
Bot/: build.sbt
Bot/project/: Dependencies.scala
HousekeeperBot/: .gitignore  CMakeLists.txt  DogBot.cpp  DogBot.h  HousekeeperBot.qbs  HttpCamera.cpp  HttpCamera.h  ImgDiffFinder.cpp  ImgDiffFinder.h  WatcherBot.cpp  WatcherBot.h  conf.json.example  imgdiff.cpp  imgdiff.h  imgsource.cpp  imgsource.h  main.cpp  watcherbot.cpp  watcherbot.h
PiCameraServer/: README.md  main.cpp
WebCameraServer/: WebCameraServer.qbs
WhoDrankMyBeerBot/: CMakeLists.txt  HttpCamera.cpp  HttpCamera.h  ImgDiffFinder.cpp  ImgDiffFinder.h  WatcherBot.cpp  WatcherBot.h  conf.json.example  main.cpp
docs/html/: annotated.html  classImgDiffFinder-members.html  classImgDiffFinder.html  classImgSource-members.html  classImgSource.html  classes.html  dir_69120092f96aa08bb5b7b9bffd6082ea.html  files.html  functions.html  functions_func.html  globals.html  globals_func.html  graph_legend.html  imgdiff_8cpp.html  imgdiff_8cpp__incl.dot  imgdiff_8cpp__incl.md5  imgdiff_8h.html  imgdiff_8h__dep__incl.dot  imgdiff_8h__dep__incl.md5  imgdiff_8h__incl.dot  imgdiff_8h__incl.md5  imgdiff_8h_source.html  imgsource_8cpp.html  imgsource_8cpp__incl.dot  imgsource_8cpp__incl.md5  imgsource_8h.html  imgsource_8h__dep__incl.dot  imgsource_8h__dep__incl.md5  imgsource_8h__incl.dot  imgsource_8h__incl.md5  imgsource_8h_source.html  index.html  main_8cpp.html  main_8cpp__incl.dot  (+1 more)
qServer/: main.cpp  qServer.qbs
(+35 files in other folders)
